--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "tailwindcss-animated": "^1.1.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.12.1",
@@ -28,6 +29,6 @@
     "eslint-config-prettier": "^7.2.0",
     "postcss": "^8.4.6",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.4"
   }
 }
