--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
+    "@radix-ui/react-avatar": "^1.1.0",
     "axios": "^0.21.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.397.0",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^1.3.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.1.2"
   },
   "devDependencies": {
