--- a/package.json
+++ b/package.json
@@ -11,18 +11,25 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
+    "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "axios": "^0.21.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.397.0",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.0",
     "swr": "^1.3.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-animated": "^1.1.2"
+    "tailwindcss-animated": "^1.1.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.12.1",
