--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint": "next lint"
   },
   "dependencies": {
+    "@capacitor/android": "^6.1.1",
+    "@capacitor/ios": "^6.1.1",
     "@headlessui/react": "^1.4.2",
     "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.12.1",
     "@babel/preset-react": "^7.18.6",
+    "@capacitor/cli": "^6.1.1",
     "@next/eslint-plugin-next": "^14.2.3",
     "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.2",
