--- a/package.json
+++ b/package.json
@@ -1,49 +1,51 @@
 {
-    "name": "breeze-next",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@capacitor/android": "^6.1.1",
-        "@capacitor/ios": "^6.1.1",
-        "@headlessui/react": "^1.4.2",
-        "@hookform/resolvers": "^3.6.0",
-        "@radix-ui/react-avatar": "^1.1.0",
-        "@radix-ui/react-label": "^2.1.0",
-        "@radix-ui/react-slot": "^1.1.0",
-        "@radix-ui/react-toast": "^1.2.1",
-        "axios": "^0.21.1",
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.1",
-        "input-otp": "^1.2.4",
-        "lucide-react": "^0.397.0",
-        "next": "^14.2.3",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-hook-form": "^7.52.0",
-        "swr": "^1.3.0",
-        "tailwind-merge": "^2.3.0",
-        "tailwindcss-animate": "^1.0.7",
-        "tailwindcss-animated": "^1.1.2",
-        "zod": "^3.23.8"
-    },
-    "devDependencies": {
-        "@babel/eslint-parser": "^7.12.1",
-        "@babel/preset-react": "^7.18.6",
-        "@capacitor/cli": "^6.1.1",
-        "@next/eslint-plugin-next": "^14.2.3",
-        "@tailwindcss/forms": "^0.5.2",
-        "autoprefixer": "^10.4.2",
-        "eslint": "^8.27.0",
-        "eslint-config-next": "^14.0.3",
-        "eslint-config-prettier": "^7.2.0",
-        "postcss": "^8.4.6",
-        "prettier": "^3.2.5",
-        "tailwindcss": "^3.4.4"
-    }
+  "name": "breeze-next",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@capacitor/android": "^6.1.1",
+    "@capacitor/ios": "^6.1.1",
+    "@headlessui/react": "^1.4.2",
+    "@hookform/resolvers": "^3.6.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "axios": "^0.21.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "input-otp": "^1.2.4",
+    "lucide-react": "^0.397.0",
+    "next": "^14.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.0",
+    "swr": "^1.3.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animated": "^1.1.2",
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.12.1",
+    "@babel/preset-react": "^7.18.6",
+    "@capacitor/cli": "^6.1.1",
+    "@next/eslint-plugin-next": "^14.2.3",
+    "@tailwindcss/forms": "^0.5.2",
+    "@types/react": "18.3.3",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.27.0",
+    "eslint-config-next": "^14.0.3",
+    "eslint-config-prettier": "^7.2.0",
+    "postcss": "^8.4.6",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.4"
+  }
 }
