--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@headlessui/react": "^1.4.2",
     "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "axios": "^0.21.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.19",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.397.0",
     "next": "^14.2.3",
