--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sharp": "^0.33.4",
     "react-router-dom": "^6.25.1",
     "styled-components": "^6.1.12",
+    "sharp": "^0.33.4",
     "swr": "^1.3.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
