--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@capacitor/android": "^6.1.1",
     "@capacitor/ios": "^6.1.1",
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^1.4.2",
     "@hookform/resolvers": "^3.6.0",
     "@mui/icons-material": "^5.16.6",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^5.16.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.13.0",
