--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
+    "react-native-svg": "^15.6.0",
     "react-router-dom": "^6.25.1",
     "sharp": "^0.33.4",
     "styled-components": "^6.1.12",
