--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@capacitor/android": "^6.1.1",
-    "@capacitor/ios": "^6.1.1",
+    "@capacitor/android": "^6.1.2",
+    "@capacitor/core": "^6.1.2",
+    "@capacitor/ios": "^6.1.2",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
@@ -58,7 +59,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.12.1",
     "@babel/preset-react": "^7.18.6",
-    "@capacitor/cli": "^6.1.1",
+    "@capacitor/cli": "^6.1.2",
     "@next/eslint-plugin-next": "^14.2.3",
     "@tailwindcss/forms": "^0.5.2",
     "@types/react": "18.3.3",
