--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.1.2",
+    "vite": "^5.4.3",
     "yup": "^1.4.0",
     "zod": "^3.23.8"
   },
