--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.2.0",
+    "formidable": "^3.5.1",
     "framer-motion": "^11.3.30",
     "input-otp": "^1.2.4",
     "ldrs": "^1.0.2",
